--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.14.1</version>
+    </dependency>
+		
+		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>2.2</version>
@@ -281,7 +287,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2</version>
+				<version><version>3.0.0</version></version>
 				<executions>
 					<execution>
 						<id>startup-uber-start</id>
